Nutrition Page Search bar integration

--- a/www/templates/addIngredient.html
+++ b/www/templates/addIngredient.html
@@ -1,5 +1,20 @@
 <ion-view title="Add Ingredient">
   <ion-content overflow-scroll="true" padding="true" class="has-header">
+      <label class="item item-input">
+          <span class="input-label">Search</span>
+          <input ion-autocomplete type="text" class="ion-autocomplete" autocomplete="off"
+                 ng-model="model"
+                 item-value-key="item_name"
+                 item-view-value-key="item_name"
+                 items-method="getTestItems(query)"
+                 items-method-value-key="items"
+                 placeholder="Enter test query ..."
+                 items-clicked-method="itemsClicked(callback)"
+                 items-removed-method="itemsRemoved(callback)"
+                 max-selected-items="1"
+                 ng-model-options="{debounce:300}" />
+      </label>
+
     <form class="list"
           name="addIngredientForm"
           ng-submit="submit(addIngredientForm)"
