--- a/www/templates/addMedicine.html
+++ b/www/templates/addMedicine.html
@@ -6,24 +6,24 @@
               ng-submit="addMedication(addMedicineForm)">
           <h4>Medicine Name</h4>
             <label class="item item-input">
-                <input type="text" placeholder="Aspirin" ng-model="medicineName" name = "medicineName">
+                <input type="text" placeholder="Aspirin" ng-model="medicineName" >
             </label>
 
         <h4>Amount Per Serving</h4>
 
             <label class="item item-input">
-                <input type="number" placeholder="2, 3, 4" ng-model = "amount" name = "amount">
+                <input type="number" placeholder="2, 3, 4" ng-model = "amount" >
             </label>
 
         <h4>Taken</h4>
            <label class="item item-input">
-               <input type="text" placeholder="Daily, Monthly, etc" ng-model = "taken" name = "taken">
+               <input type="text" placeholder="Daily, Monthly, etc" ng-model = "taken" >
            </label>
 
         <h4>Extra</h4>
 
             <label class="item item-input">
-                <input type="text" placeholder="Take one at night with food." ng-model="extra" name = "extra">
+                <input type="text" placeholder="Take one at night with food." ng-model="extra" >
             </label>
         </form>
 
