--- a/www/templates/recipeCardHolder.html
+++ b/www/templates/recipeCardHolder.html
@@ -2,7 +2,7 @@
     <ion-content overflow-scroll="true" padding="true" class="has-header has-footer">
         <img src="img/il_340x270.412276130_b7nf.jpg" width="100%" height="auto" style="width: 100%; height: auto;">
         <!--<a href="#/login" class="button button-stable button-block ">Log In</a>-->
-        <button class="button button-balanced button-block" type="submit" ng-click="login()">Log In</button>
+        <button class="button button-block" type="submit" ng-click="login()">Log In</button>
         <a href="#/page4" class="button button-stable button-block ">Sign Up</a>
     </ion-content>
 </ion-view>
