--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,7 +1,7 @@
 <ion-view title="Settings">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <ion-list>
-            <ion-item href="#/page18">My Account</ion-item>
+            <ion-item href="#/page18">Change Email</ion-item>
             <ion-item href="#/page19">Share My Data</ion-item>
             <button class="button  button-block" type="submit" ng-click= "changePW()" > Change Password </button >
             <button class="button  button-block" type="submit" ng-click= "logOut()" > Logout </button>
