--- a/www/templates/changePW.html
+++ b/www/templates/changePW.html
@@ -1,17 +1,18 @@
-<ion-view title="changePW">
+<ion-view title="Update Password">
   <ion-content overflow-scroll="true" padding="true" scroll="false" class="has-header">
     <form name = "changePWForm"
           ng-submit="changePW(changePWForm)"
           novalidate =""
           class="change-form">
+
       <ion-list>
+
         <label class="item item-input"
                ng-class="{'has-error':changePWForm.name.$invalid}">
-          <span class="input-label">Password</span>
+          <span class="input-label">Current Password</span>
           <input type="password"
                  placeholder=""
                  ng-model="formData.password"
-                 name = "password"
                  ng-required="true"  >
         </label>
 
@@ -26,7 +27,6 @@
           <input type="password"
                  placeholder=""
                  ng-model="formData.newPassword"
-                 name="newPassword"
                  ng-minlength="6"
                  ng-messages-include="templates/form-errors.html"
                  ng-required="true"
@@ -49,7 +49,6 @@
           <input type="password"
                  placeholder=""
                  ng-model="formData.confirmNewPassword"
-                 name="newPasswordConfirm"
                  ng-minlength="6"
                  ng-required="true"
           >
@@ -68,8 +67,7 @@
 
 
       </ion-list>
-
-      <button class="button  button-block" type="submit" > Change Password </button >
+      <button class="button button-block" type="submit" ng-click="changePW(changePWForm)"> Update Password </button >
     </form>
   </ion-content>
 </ion-view>
