Adjusted meals ingredients page.

--- a/www/templates/addIngredient.html
+++ b/www/templates/addIngredient.html
@@ -51,6 +51,34 @@
                  placeholder="Fat Content">
         </label>
 
+      <label class="item item-input item-floating-label">
+        <span class="input-label">Calories</span>
+        <input type="text"
+               ng-model="formData.calories"
+               placeholder="Calories">
+      </label>
+
+      <label class="item item-input item-floating-label">
+        <span class="input-label">Protein</span>
+        <input type="text"
+               ng-model="formData.protein"
+               placeholder="Protein">
+      </label>
+
+      <label class="item item-input item-floating-label">
+        <span class="input-label">Sugars</span>
+        <input type="text"
+               ng-model="formData.sugars"
+               placeholder="Sugars">
+      </label>
+
+      <label class="item item-input item-floating-label">
+        <span class="input-label">Sodium</span>
+        <input type="text"
+               ng-model="formData.sodium"
+               placeholder="Sodium">
+      </label>
+
         <h4>Freshness</h4>
         <label class="item item-input item-floating-label">
           <span class="input-label"></span>
