--- a/www/templates/myMeds.html
+++ b/www/templates/myMeds.html
@@ -1,29 +1,17 @@
 <ion-view title="My Meds">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         
-        <ion-list>
-        <div class="spacer" style="width: 300px; height: 23px;"></div>
-        <ion-list ng-controller="MedCtrl">
-            <ion-item class="item-thumbnail-left" ng-repeat="i in retVals">
-             
-                <p>Name:  {{i.name}}</p>
-                <p>Amount:  {{i.amount}}</p>
-                <p>Taken:  {{i.taken}}</p>
-                <p>Extra:  {{i.extra}}</p>
-                <p>Guid:  {{i.guid}}</p>
 
+        <ion-list>
+            <ion-item  ng-repeat="i in retVals">
+                <p>Medicine Name:  {{i.name}}</p>
+                <p>Amount Per Serving:  {{i.amount}}</p>
+                <p>Taken:  {{i.taken}}</p>
+                <p>Extra Info:  {{i.extra}}</p>
                 <ion-option-button class="button-positive" ng-click="setFill(i)"><i class="icon ion-edit"></i></ion-option-button>
                 <ion-option-button class="button-assertive" ng-click="setRemove(i)"><i class="icon ion-ios-trash"></i></ion-option-button>
-
-
             </ion-item>
-        </ion-list>
-
-
-        <div class="list card">
-            <div class="item item-divider">Card</div>
-            <div class="item item-body"></div>
-        </div>
-      <button class="button button-block" type="submit" ng-click="addMeds()">Add New</button>
+    </ion-list>
+      <button class="button button-block" type="submit" ng-click="medPage()">Add New</button>
     </ion-content>
 </ion-view>
