--- a/www/templates/addMedicine.html
+++ b/www/templates/addMedicine.html
@@ -1,34 +1,26 @@
 <ion-view title="Add Medicine">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
-        <form class="create-form"
-              name = "addMedicineForm"
-              novalidate = "novalidate"
-              ng-submit="addMedication(addMedicineForm)">
-          <h4>Medicine Name</h4>
-            <label class="item item-input">
-                <input type="text" placeholder="Aspirin" ng-model="medicineName" >
-            </label>
+        <h4>Medicine Name</h4>
+        <label class="item item-input">
+            <input type="text" placeholder="Aspirin" ng-model="addMed.medicineName">
+        </label>
 
         <h4>Amount Per Serving</h4>
 
-            <label class="item item-input">
-                <input type="number" placeholder="2, 3, 4" ng-model = "amount" >
-            </label>
+        <label class="item item-input">
+            <input type="number" placeholder="2, 3, 4" ng-model="addMed.amount">
+        </label>
 
         <h4>Taken</h4>
-           <label class="item item-input">
-               <input type="text" placeholder="Daily, Monthly, etc" ng-model = "taken" >
-           </label>
+        <label class="item item-input">
+            <input type="text" placeholder="Daily, Monthly, etc" ng-model="addMed.taken">
+        </label>
 
         <h4>Extra</h4>
+        <label class="item item-input">
+            <input type="text" placeholder="Take one at night with food." ng-model="addMed.extra">
+        </label>
 
-            <label class="item item-input">
-                <input type="text" placeholder="Take one at night with food." ng-model="extra" >
-            </label>
-        </form>
-
-      <!--<button class="button button-balanced button-block" type="submit">Submit</button>-->
-      <button class="button button-balanced button-block" type ="submit" ng-click="addMed()">Submit</button>
-
+        <button class="button button-balanced button-block" type="submit" ng-click="addMedication()">Submit</button>
     </ion-content>
 </ion-view>
