--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -8,30 +8,22 @@
                     <span class="input-label">Email</span>
                     <input type="email"
                            placeholder=""
-                           ng-model="formData.email"
-                    >
+                           ng-model="formData.email"   >
                 </label>
-
-              </div>
                 <label class="item item-input"
                        ng-class="{'has-error':loginForm.password.$invalid}">
                     <span class="input-label">Password</span>
                     <input type="password"
-                           placeholder=""
-                           ng-model="formData.password"
-                    >
+                          placeholder=""
+                          ng-model="formData.password" >
                 </label>
-
-
               <button class="button button-clear button-positive" ng-click="reset()"> Reset Password </button>
-
-
             </ion-list>
+
             <div class="spacer" style="height: 40px;"></div>
             <!--<a href="#/page5/page10" class="button button-stable button-block ">Log in</a>-->
           <button class="button  button-block" type="submit"  ng-click="login(loginForm)"> Log in</button >
           <a href="#/page4" class="button button-positive button-clear button-block ">Or create an account</a>
-
         </form>
     </ion-content>
 </ion-view>
