--- a/www/templates/myAccount.html
+++ b/www/templates/myAccount.html
@@ -1,4 +1,4 @@
-<ion-view title="Change Email">
+<ion-view title="Change Email"  ng-init="setEmail()">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
       <form name = "myAccForm"
             ng-submit="submit(myAccForm)"
@@ -8,7 +8,7 @@
         <div>
           <label class="item item-input"
                  ng-class="{'has-error':createForm.email.$invalid}">
-            <span class="input-label" onload="setEmail()" id="currentEmail"></span>
+            <span class="input-label" ng-model="currentEmail"> </span>
 
           </label>
         </div>
