--- a/www/templates/recipeBook.html
+++ b/www/templates/recipeBook.html
@@ -19,7 +19,7 @@
                 <p>Description:  {{i.recipeDesc}}</p>
 
                 <ion-option-button class="button-positive" ng-click="setFill(i)"><i class="icon ion-edit"></i></ion-option-button>
-                <ion-option-button class="button-assertive" ng-click="setRemove(i)"><i class="icon ion-ios-trash"></i></ion-option-button>
+                <ion-option-button class="button-assertive" ng-click="deleteRecipe(i)"><i class="icon ion-ios-trash"></i></ion-option-button>
 
 
             </ion-item>
