--- a/www/templates/recipeBook.html
+++ b/www/templates/recipeBook.html
@@ -4,7 +4,7 @@
             <form class="list">
                 <label class="item item-input">
                     <span class="input-label">Recipe Title</span>
-                    <input type="text" placeholder="">
+                    <input type="search" placeholder="Search" ng-model="search" />
                 </label>
             </form>
 
