cosmetic changes for nicket

--- a/www/templates/addARecipe.html
+++ b/www/templates/addARecipe.html
@@ -48,7 +48,7 @@
             <!-- <button class="button button-icon ion-camera" ng-click="addPicture()"></button>-->
             <br />
             <ion-list class="item-icon-right" ng-controller="addARecipeCtrl" ng-init="ingredient()">
-                <ion-item ng-repeat="i in retVals">
+                <ion-item  ng-class= "balanced" ng-repeat="i in retVals">
                     <p>Name: {{i.ingName}}</p>
                     <p>Calories : {{i.calories}} &nbsp;&nbsp;    Protein : {{i.protein}}</p>
                     <p>Sugars : {{i.sugars}}   &nbsp;&nbsp;  Sodium : {{i.sodium}}</p>
