--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -4,27 +4,67 @@ in ionic's _variables.scss file.
 
 For example, you might change some of the default colors:
 
-$light:                           #fff !default;
-$stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
-$calm:                            #11c1f3 !default;
-$balanced:                        #33cd5f !default;
-$energized:                       #ffc900 !default;
-$assertive:                       #ef473a !default;
-$royal:                           #886aea !default;
-$dark:                            #444 !default;
+
 */
 
+$light:                           #CCCCCC !default;
+$stable:                          #008080!default;
+$positive:                        #f1f341 !default;
+$calm:                            #f6c400 !default;
+$balanced:                        rgba(62, 232, 71, 0.34) !default;
+$energized:                       rgba(243, 19, 1, 0.82) !default;
+$assertive:                       rgba(224, 18, 2, 0.97) !default;
+$royal:                           #000568 !default;
+$dark:                            #b2b2b2 !default;
 
-$royal: #73C8A9;
-$positive:  #73C849;
-$dark: #373B44;
-$stable: #DEE1B6;
-$assertive:  #BD5532;
+
+.button.button-stable {
+    border-color: transparent;
+    background-color: #AA0909;
+    color: #AA0909;
+}
+
+a.button.button-stable.button-block {
+    color: #F90000;
+}
+div.tab-nav.tabs {
+    background-color: #008080;
+}
+.tabs-icon-top > .tabs .tab-item, .tabs-icon-top.tabs .tab-item, .tabs-icon-bottom > .tabs .tab-item, .tabs-icon-bottom.tabs .tab-item {
+    font-size: 10px;
+    line-height: 14px;
+    color: white;
+}
+
+div.title  {
+    color:rgba(243, 19, 1, 0.82);
+}
 
 
-@import url(http://fonts.googleapis.com/css?family=Domine:400,700); 
-$font-family-base: ‘Domine’, serif; 
+
+ .bar {
+    border-color: #ddd;
+    background-color: white;
+    background-image: linear-gradient(0deg, #ddd, #ddd 50%, transparent 50%);
+    color: rgba(243, 19, 1, 0.82); }
+  .bar.bar-light {
+    border-color: #ddd;
+    background-color: white;
+    background-image: linear-gradient(0deg, #ddd, #ddd 50%, transparent 50%);
+    color: rgba(243, 19, 1, 0.82); }
+    .bar.bar-light .title {
+      color:rgba(243, 19, 1, 0.82); }
+    .bar.bar-light.bar-footer {
+      background-image: linear-gradient(180deg, #ddd, #ddd 50%, transparent 50%); }
+  .bar.bar-stable {
+    border-color: #b2b2b2;
+    background-color: teal;
+    background-image: linear-gradient(0deg, #b2b2b2, #b2b2b2 50%, transparent 50%);
+    color:rgba(243, 19, 1, 0.82); }
+    .bar.bar-stable .title {
+      color: rgba(243, 19, 1, 0.82); }
+@import url(https://fonts.googleapis.com/css?family=Raleway); 
+$font-family-base: ‘Raleway’, serif; 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
