--- a/www/templates/recipeBook.html
+++ b/www/templates/recipeBook.html
@@ -11,7 +11,7 @@
         </ion-list>
         <div class="spacer" style="width: 300px; height: 23px;"></div>
         <ion-list ng-controller="recipeBookCtrl">
-            <ion-item ng-repeat="i in retVals">
+            <ion-item ng-repeat="i in retVals2">
                 <p>Name:  {{i.recipeName}}</p>
                 <p>Preperation Time:  {{i.prepTime}}</p>
                 <p>Cooking Time:  {{i.cookingTime}}</p>
